--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"Oaert Page",
+    "subTitle":"Why You Try",
+    "avatarUrl":"https://img.picui.cn/free/2024/06/20/6673d27508749.png",
     "GMEEK_VERSION":"last"
 }
